<resources>
    <string name="app_name">IoTProject</string>
    <string name="gate">Gate</string>
    <string name="activity">Activity</string>
    <string name="profile_image">profile image</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_in_underlined"><u>Sign In</u></string>
    <string name="sign_in">Sign In</string>
    <string name="repeat_password">repeat password</string>
    <string name="register_car">Register car</string>
    <string name="license_plate">License Plate</string>
    <string name="car_color">Car color</string>
    <string name="car_brand">Car brand</string>
    <string name="confirm">Confirm</string>
    <string name="register_gate">Register gate</string>
    <string name="registe_car_title">Car Details</string>
    <string name="no_gates">No gates registered</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="toolbar_default">Name Surname</string>
    <string name="rule_dialog_title">Rule Details</string>
    <string name="nickname_hint">Nickname</string>
    <string name="test_gate_code">d8c0e668-b59e-455e-af78-77470ba291c5</string>
    <string name="ignored">Ignored</string>
    <string name="no_activity">No activity registered</string>
    <string name="no_car">No car registered</string>
    <string name="nickname">nickname</string>

    <string-array name="car_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Gray</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Cyan</item>
    </string-array>

    <string-array name="car_brands">
        <item>Abarth</item>
        <item>Alfa Romeo</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Bugatti</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Dacia</item>
        <item>Ferrari</item>
        <item>FIAT</item>
        <item>Ford</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Maserati</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Renault</item>
        <item>Skoda</item>
        <item>Volkswagen</item>
        <item>Tesla</item>
    </string-array>

</resources>